--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <br>
+    <a href="recipes/garlicBread.html">Garlic bread</a>
+    <br>
+    <a href="recipes/lasagna.html">Lasagna</a>
 </body>
 </html>
