styled the recipes

--- a/recipes/garlicBread.html
+++ b/recipes/garlicBread.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garlic Bread</title>
+    <link rel="stylesheet" href="recipeStyle.css">
 </head>
 <body>
     <h1>Garlic Bread Recipe</h1>
-    <img src="https://www.allrecipes.com/thmb/eS7ubDEraw9npQ6pRC7c6og2T4I=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/216077-garlic-bread-spread-step-beauty-4x3-BP-3169-ef03a4a12d8c46e196055555be5b8d79.jpg" alt="garlic bread" height="200" width="300">
+    <img id="topImg" src="https://www.allrecipes.com/thmb/eS7ubDEraw9npQ6pRC7c6og2T4I=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/216077-garlic-bread-spread-step-beauty-4x3-BP-3169-ef03a4a12d8c46e196055555be5b8d79.jpg" alt="garlic bread" height="200" width="300">
     <h2>get ready for a garlicy day</h2>
-    <p></p>
+    <p class="description">This is the BEST homemade garlic bread you’ll ever make. It has fresh herbs, tons of flavorful roasted garlic, and is perfectly toasted. This easy garlic bread recipe is delicious served with your fav pasta dishes & comfort foods, and is a guaranteed crowd-pleaser!</p>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="ingredient">
         <li>½ cup butter, softened</li>
         <li>¼ cup grated Parmesan cheese</li>
         <li>2 cloves garlic, minced</li>
@@ -25,7 +26,7 @@
         
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol class="steps">
         <li>Gather ingredients and preheat the oven to 350 degrees F (175 degrees C).</li>
         <li>Mix butter, Parmesan cheese, garlic, marjoram, basil, fines herbs, oregano, parsley, and pepper together in a bowl until thoroughly combined.</li>
         <li>Slice Italian bread loaf in half lengthwise; spread each half generously with the garlic butter mixture. Transfer onto a baking sheet.</li>
