--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="recipeStyle.css">
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-    <img src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="image of a delicious lasagna" height="200" width="300">
+    <img id="topImg" src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="image of a delicious lasagna" height="200" width="300">
     <h2>make yourself happy by giving yourself a cheezy lasagna that melts in your mouth</h2>
-    <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below:</p>
+    <p class="description">Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below:</p>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="ingredient">
         <li>1 pound sweet Italian sausage</li>
         <li>¾ pound lean ground beef</li><li>½ cup minced onion</li>
         <li>2 cloves garlic, crushed</li>
@@ -32,7 +33,7 @@
         <li>¾ cup grated Parmesan cheese</li>
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol class="steps">
         <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
         <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</li>
         <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.
